# KOdoo

./: CMakeLists.txt  org.kde.kodooexample.desktop  org.kde.kodooexample.json  org.kde.kodooexample.metainfo.xml
android/: AndroidManifest.xml
src/: CMakeLists.txt  accountcollection.cpp  accountcollection.h  accountcontroller.cpp  accountcontroller.h  contactcollection.cpp  contactcollection.h  contactcontroller.cpp  contactcontroller.h  countrycollection.cpp  countrycollection.h  countrystatecollection.cpp  countrystatecollection.h  invoicecollection.cpp  invoicecollection.h  invoicecontroller.cpp  invoicecontroller.h  invoicelinecontroller.cpp  invoicelinecontroller.h  kodooexampleconfig.kcfgc  main.cpp  merdemodel.cpp  merdemodel.h  modelcontroller.cpp  modelcontroller.h  odoosettings.cpp  odoosettings.h  productcollection.cpp  productcollection.h  productcontroller.cpp  productcontroller.h  resources.qrc  taxcollection.cpp  taxcollection.h  taxcontroller.cpp  taxcontroller.h
src/contents/ui/: .InvoiceForm.qml.swo  .InvoiceForm.qml.swp  .InvoiceLineForm.qml.swp  .ModelForm.qml.swp  About.qml  AccountForm.qml  AccountIndex.qml  AccountIndexBase.qml  AccountPicker.qml  Authenticate.qml  ContactForm.qml  ContactIndex.qml  ContactIndexBase.qml  ContactPicker.qml  InvoiceForm.qml  InvoiceIndex.qml  InvoiceLineForm.qml  MainView.qml  ModelForm.qml  ModelIndex.qml  ProductForm.qml  ProductIndex.qml  ProductIndexBase.qml  ProductPicker.qml  TaxForm.qml  TaxIndex.qml  main.qml
src/contents/ui/components/: .GridTable.qml.swp  GridTable.qml  PickerButton.qml
